--- a/static/index.html
+++ b/static/index.html
@@ -80,7 +80,7 @@
 
         .cm-scroller {
             overflow: auto !important;
-            font-family: 'JetBrains Mono', monospace !important;
+            font-family: 'Pretendard', 'JetBrains Mono', monospace !important;
         }
 
         /* CodeMirror 6 search panel is now visible */
@@ -549,18 +549,7 @@
                         <!-- Settings/About Removed -->
                         <div class="w-[1px] h-4 bg-slate-200 dark:bg-[#434C5E] mx-1 hidden sm:block"></div>
                         <div class="hidden sm:flex flex-col items-end justify-center select-none text-right">
-                            <span
-                                class="text-[10px] font-extrabold text-[#1e3a8a] dark:text-[#8FBCBB] uppercase tracking-widest leading-none mb-1 flex items-center justify-end">
-                                <span v-if="hasIDB" class="material-symbols-rounded text-[10px] mr-1"
-                                    :class="isSyncing ? 'animate-spin text-green-500' : ''"
-                                    title="Local-First Storage Active">database</span>
-                                {{ statusMessage === 'Ready' ? 'SAVED' : statusMessage }}
-                            </span>
-                            <span
-                                class="text-[9px] text-[#1e3a8a] dark:text-[#8FBCBB] font-medium opacity-80 whitespace-nowrap leading-none">
-                                {{ formatDateParts(selectedNote.updated_at).date }} {{
-                                formatDateParts(selectedNote.updated_at).time }}
-                            </span>
+                            <!-- Moved to Status Bar -->
                         </div>
                     </div>
                 </div>
@@ -1099,6 +1088,49 @@
                     </div>
                 </div>
             </div> <!-- Close Main Layout -->
+            <!-- Status Bar -->
+            <!-- Status Bar -->
+            <footer
+                class="h-6 bg-slate-100 dark:bg-[#2E3440] border-t border-slate-200 dark:border-[#3B4252] flex items-center justify-end px-3 select-none shrink-0 z-30 transition-colors duration-300">
+                <div class="flex items-center gap-2">
+                    <!-- Data Source Indicator (Only if note selected) -->
+                    <span v-if="selectedNote" class="text-[10px] font-extrabold flex items-center gap-1.5" :class="{
+                                'text-purple-600 dark:text-purple-400': loadingState.source === 'IDB',
+                                'text-blue-600 dark:text-blue-400': loadingState.source === 'CLOUD' || loadingState.source === 'SYNC',
+                                'text-slate-400 dark:text-slate-500': loadingState.source === 'NONE'
+                            }">
+
+                        <span v-if="loadingState.source === 'IDB'" class="material-symbols-rounded text-[14px]"
+                            title="Loaded from Local IndexedDB">database</span>
+                        <span v-else-if="loadingState.source === 'CLOUD'" class="material-symbols-rounded text-[14px]"
+                            title="Synced with Server">cloud_done</span>
+                        <span v-else-if="loadingState.source === 'SYNC'"
+                            class="material-symbols-rounded text-[14px] animate-spin" title="Syncing...">sync</span>
+                        <span v-else class="material-symbols-rounded text-[14px]">cloud_off</span>
+
+                        <span class="uppercase tracking-wide">{{ loadingState.message }}</span>
+                    </span>
+
+                    <span v-if="selectedNote" class="w-[1px] h-2.5 bg-slate-300 dark:bg-slate-600 mx-1"></span>
+
+                    <!-- Sync Status -->
+                    <span
+                        class="text-[10px] font-extrabold text-[#1e3a8a] dark:text-[#8FBCBB] uppercase tracking-widest leading-none flex items-center">
+                        <span v-if="hasIDB" class="material-symbols-rounded text-[10px] mr-1"
+                            :class="isSyncing ? 'animate-spin text-green-500' : ''"
+                            title="Local-First Storage Active">dns</span>
+                        <span class="mr-1">{{ statusMessage === 'Ready' ? 'Locally Saved' : statusMessage }}</span>
+                    </span>
+
+                    <span v-if="selectedNote" class="w-[1px] h-2.5 bg-slate-300 dark:bg-slate-600"></span>
+
+                    <span v-if="selectedNote"
+                        class="text-[9px] text-[#1e3a8a] dark:text-[#8FBCBB] font-medium opacity-80 whitespace-nowrap leading-none">
+                        {{ formatDateParts(selectedNote.updated_at).date }} {{
+                        formatDateParts(selectedNote.updated_at).time }}
+                    </span>
+                </div>
+            </footer>
     </div> <!-- Close flex-col -->
     </main>
     </div> <!-- Close #app -->
