--- a/static/index.html
+++ b/static/index.html
@@ -22,9 +22,9 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <link rel="stylesheet" href="/static/style.css?v=7">
+
     <link id="github-theme" rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown-light.min.css">
     <link id="highlight-theme" rel="stylesheet" href="https://unpkg.com/nord-highlightjs@0.1/dist/nord.css">
     <link
         href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&family=Inter:wght@400;500;600&display=swap"
@@ -36,6 +36,9 @@
 
     <!-- CodeMirror Base CSS (includes search panel styles) -->
     <link rel="stylesheet" href="https://unpkg.com/@codemirror/view@6.23.0/dist/index.css">
+
+    <!-- Custom Styles (Loaded last to override libraries) -->
+    <link rel="stylesheet" href="/static/style.css?v=19">
 
 
 
