--- a/static/index.html
+++ b/static/index.html
@@ -485,9 +485,13 @@
                             <span class="material-symbols-rounded text-[22px]">view_sidebar</span>
                         </button>
                         <button @click="backToList()"
-                            class="p-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all flex-shrink-0 flex items-center gap-1"
+                            class="p-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all flex-shrink-0 flex items-center gap-1 pr-3"
                             title="Back to Notes">
                             <span class="material-symbols-rounded text-[22px]">arrow_back_ios_new</span>
+                            <span class="text-sm font-semibold truncate max-w-[150px] hidden sm:inline-block">
+                                {{ selectedNote.folder_id ? (folders.find(f => f.id === selectedNote.folder_id)?.name ||
+                                'Unknown') : 'Inbox' }}
+                            </span>
                         </button>
 
                         <!-- View Mode Tabs (Moved to Header) -->
