--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,13 @@
     <script>
         tailwind.config = {
             darkMode: 'class',
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Pretendard', 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'sans-serif'],
+                    }
+                }
+            }
         }
         // Immediate Dark Mode Init to prevent white flash
         if (localStorage.getItem('shynote_dark_mode') !== 'false') {
@@ -1126,7 +1133,7 @@
                     class="h-6 bg-slate-100 dark:bg-[#2E3440] border-t border-slate-200 dark:border-[#3B4252] flex items-center justify-between px-3 select-none shrink-0 z-50 transition-colors duration-300">
                     <!-- Left: Online Status -->
                     <div class="flex items-center gap-2">
-                        <span class="text-[10px] font-extrabold flex items-center gap-1.5 uppercase tracking-wide"
+                        <span class="text-[10px] font-medium flex items-center gap-1.5 uppercase tracking-wide"
                             :class="isOnline ? 'text-green-600 dark:text-green-400' : 'text-red-500'">
                             <span class="w-1.5 h-1.5 rounded-full"
                                 :class="isOnline ? 'bg-green-500' : 'bg-red-500'"></span>
@@ -1136,7 +1143,7 @@
 
                     <div class="flex items-center gap-2">
                         <!-- Data Source Indicator (Global) -->
-                        <span class="text-[10px] font-extrabold flex items-center gap-1.5" :class="{
+                        <span class="text-[10px] font-medium flex items-center gap-1.5" :class="{
                                 'text-purple-600 dark:text-purple-400': loadingState.source === 'IDB',
                                 'text-blue-600 dark:text-blue-400': loadingState.source === 'CLOUD' || loadingState.source === 'SYNC',
                                 'text-slate-400 dark:text-slate-500': loadingState.source === 'NONE'
@@ -1157,17 +1164,18 @@
 
                         <!-- Sync Status -->
                         <span
-                            class="text-[10px] font-extrabold text-[#1e3a8a] dark:text-[#8FBCBB] uppercase tracking-widest leading-none flex items-center">
+                            class="text-[10px] font-medium text-[#1e3a8a] dark:text-[#8FBCBB] uppercase tracking-widest leading-none flex items-center">
                             <span v-if="hasIDB" class="material-symbols-rounded text-[10px] mr-1"
                                 :class="isSyncing ? 'animate-spin text-green-500' : ''"
                                 title="Local-First Storage Active">dns</span>
                             <span class="mr-1">{{ statusMessage === 'Ready' ? 'Save Complete' : statusMessage }}</span>
                         </span>
 
-                        <span v-if="selectedNote" class="w-[1px] h-2.5 bg-slate-300 dark:bg-slate-600"></span>
+                        <span v-if="selectedNote"
+                            class="w-[1px] h-2.5 bg-slate-300 dark:bg-slate-600 mx-1 hidden sm:block"></span>
 
                         <span v-if="selectedNote"
-                            class="text-[9px] text-[#1e3a8a] dark:text-[#8FBCBB] font-medium opacity-80 whitespace-nowrap leading-none">
+                            class="text-[10px] text-[#1e3a8a] dark:text-[#8FBCBB] font-medium opacity-80 whitespace-nowrap leading-none hidden sm:inline">
                             {{ formatDateParts(selectedNote.updated_at).date }} {{
                             formatDateParts(selectedNote.updated_at).time }}
                         </span>
