fix: Reduce font size of drag-and-drop hint texts

--- a/static/index.html
+++ b/static/index.html
@@ -454,7 +454,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text-center py-2 text-[#2663EB] text-sm select-none pointer-events-none">
+                        <p class="text-center py-2 text-[#2663EB] text-[10px] select-none pointer-events-none">
                             Drag notes to folder to move
                         </p>
 
@@ -885,7 +885,7 @@
                         </div>
 
                         <!-- Persistent Drag Drop Hint -->
-                        <div class="text-center py-6 text-[#2663EB] text-sm select-none pointer-events-none">
+                        <div class="text-center py-6 text-[#2663EB] text-[10px] select-none pointer-events-none">
                             Drag text files here to import
                         </div>
 
