--- a/static/index.html
+++ b/static/index.html
@@ -269,7 +269,7 @@
         <!-- Sidebar Wrapper -->
         <div :class="[
                 isSidebarOpen ? 'w-full md:w-80' : 'w-0', 
-                'md:relative absolute inset-y-0 left-0 z-30',
+                'md:relative absolute inset-y-0 left-0 z-20',
                 'flex-shrink-0 transition-all duration-150 ease-in-out',
                 'md:overflow-visible overflow-hidden'
             ]">
@@ -290,7 +290,7 @@
                     <!-- Header -->
                     <div class="p-4 border-b border-[#E6E4DD] dark:border-[#3B4252] flex items-center bg-[#F2F0EA] dark:bg-[#242933] flex-shrink-0 transition-all"
                         :class="isSidebarOpen ? 'justify-between' : 'justify-center'">
-                        <a :href="homeUrl" class="flex items-center gap-2 cursor-pointer group/logo no-underline"
+                        <a :href="homeUrl" class="flex items-center gap-2 cursor-pointer group/logo no-underline flex-1"
                             title="Go to Home">
                             <img src="/static/logo.png"
                                 class="w-6 h-6 rounded-full shadow-sm object-cover group-hover/logo:scale-110 transition-transform"
@@ -305,20 +305,23 @@
                                     appVersion }}</span>
                             </div>
                         </a>
-                        <button @click="toggleDarkMode" v-show="isSidebarOpen"
-                            class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 rounded-full transition-colors"
-                            :title="isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode'">
-                            <span class="material-symbols-rounded text-[20px] block transition-transform duration-300"
-                                :class="isDarkMode ? 'rotate-180' : 'rotate-0'">
-                                {{ isDarkMode ? 'light_mode' : 'dark_mode' }}
-                            </span>
-                        </button>
-                        <!-- Sidebar Toggle (Close) -->
-                        <button @click.stop="toggleSidebar" v-show="isSidebarOpen"
-                            class="p-1 ml-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 dark:hover:text-[#ECEFF4] dark:hover:bg-[#4C566A] rounded-lg transition-colors"
-                            title="Close Sidebar">
-                            <span class="material-symbols-rounded text-[20px]">arrow_back_ios_new</span>
-                        </button>
+                        <div class="flex items-center gap-1">
+                            <button @click="toggleDarkMode" v-show="isSidebarOpen"
+                                class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 dark:hover:text-[#ECEFF4] dark:hover:bg-[#4C566A] rounded-full transition-colors"
+                                :title="isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode'">
+                                <span
+                                    class="material-symbols-rounded text-[20px] block transition-transform duration-300"
+                                    :class="isDarkMode ? 'rotate-180' : 'rotate-0'">
+                                    {{ isDarkMode ? 'light_mode' : 'dark_mode' }}
+                                </span>
+                            </button>
+                            <!-- Sidebar Toggle (Close) -->
+                            <button @click.stop="toggleSidebar" v-show="isSidebarOpen"
+                                class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 dark:hover:text-[#ECEFF4] dark:hover:bg-[#4C566A] rounded-lg transition-colors"
+                                title="Close Sidebar">
+                                <span class="material-symbols-rounded text-[20px]">arrow_back_ios_new</span>
+                            </button>
+                        </div>
                     </div>
 
                     <!-- Toolbar (Sort & New) -->
@@ -547,7 +550,7 @@
             <div class="flex flex-col h-full">
                 <!-- Toolbar -->
                 <div v-if="rightPanelMode !== 'list' && selectedNote"
-                    class="h-12 border-b border-slate-100 dark:border-[#434C5E] bg-white/80 dark:bg-[#24292F]/80 backdrop-blur-sm flex justify-between items-center pl-1 pr-4 flex-shrink-0 transition-colors duration-300 z-30">
+                    class="h-12 border-b border-slate-100 dark:border-[#434C5E] bg-white/80 dark:bg-[#24292F]/80 backdrop-blur-sm flex justify-between items-center pl-1 pr-4 flex-shrink-0 transition-colors duration-300 relative z-10 md:z-40">
                     <div class="flex items-center gap-4">
                         <button @click.stop="toggleSidebar" v-if="!isSidebarOpen"
                             class="p-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all flex-shrink-0"
