style: Adjust editor and preview padding, and dynamically update CodeMirror themes on dark mode toggle.

--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- Custom Styles (Loaded last to override libraries) -->
-    <link rel="stylesheet" href="/static/style.css?v=20">
+    <link rel="stylesheet" href="/static/style.css?v=21">
 
 
 
@@ -1147,7 +1147,7 @@
                                 </div>
                                 <div class="flex-1 overflow-hidden relative">
                                     <div ref="previewRef" @scroll="handleScroll" v-html="previewContent"
-                                        :style="'font-size: ' + fontSize + 'px !important; padding: 5px !important;'"
+                                        :style="'font-size: ' + fontSize + 'px !important;'"
                                         class="markdown-body overflow-y-auto h-full bg-white dark:bg-[#2E3440] transition-colors">
                                     </div>
                                 </div>
